apply plugin: 'com.android.application'

android {
    ndkVersion "21.0.6113669"
    compileSdkVersion 36
    defaultConfig {
        applicationId "com.pureqml.qmlcore.runtime.android"
        minSdkVersion 21
        targetSdkVersion 36
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        multiDexEnabled true
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    namespace 'com.pureqml.android'
}

dependencies {
    repositories {
        maven { url = "https://jitpack.io" }
    }
    //implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation("com.github.ynab:j2v8:6.2.1-16kb.2")

    implementation 'androidx.media3:media3-exoplayer:1.8.0'
    implementation 'androidx.media3:media3-exoplayer-dash:1.8.0'
    implementation 'androidx.media3:media3-exoplayer-hls:1.8.0'
    implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.19.1'
    implementation 'com.caverock:androidsvg-aar:1.4'
    implementation 'androidx.multidex:multidex:2.0.1'
    //implementation 'com.neovisionaries:nv-websocket-client:2.10'

    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
    constraints {
        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
            because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
        }
        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0") {
            because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
        }
    }
}

tasks.register('testClasses')